--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
@@ -14,9 +17,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">羽村きみか うたさーち</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="?favorite=true">お気に入り</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -27,16 +41,23 @@
             </span>
             <input id="search-query" class="form-control" placeholder="キーワードであいまい絞り込み">
         </div>
+        <div>
+            <div >検索オプション</div>
+            <input id="favorite-only" class="form-check-input" value="" type="checkbox">
+            <label for="favorite-only"><i class="bi bi-heart-fill"></i>のみ</label>
+        </div>
+    </div>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <th scope="row" class="w-50">アーティスト</th>
-                    <th>曲</th>
+                    <th scope="col">お気に入り</th>
+                    <th scope="col">曲</th>
+                    <th scope="col">アーティスト</th>
                 </tr>
             </thead>
             <tbody id="songs-list"></tbody>
         </table>
-    </div>
+        </div>
 </body>
 
 </html>
