--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="?favorite=true">お気に入り</a>
-                    </li>
-                </ul>
-            </div>
+            <!-- <div class="collapse navbar-collapse" id="navbarNavDropdown"> -->
+            <!--     <ul class="navbar-nav"> -->
+            <!--         <li class="nav-item"> -->
+            <!--             <a class="nav-link active" aria-current="page" href="?favorite=true">お気に入り</a> -->
+            <!--         </li> -->
+            <!--     </ul> -->
+            <!-- </div> -->
         </div>
     </nav>
 
@@ -45,13 +45,15 @@
             <div >検索オプション</div>
             <input id="favorite-only" class="form-check-input" value="" type="checkbox">
             <label for="favorite-only"><i class="bi bi-heart-fill"></i>のみ</label>
+            <input id="full-only" class="form-check-input" value="" type="checkbox">
+            <label for="full-only">フルのみ</label>
         </div>
     </div>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
                     <th scope="col">お気に入り</th>
-                    <th scope="col">曲</th>
+                    <th scope="col">曲 (<i class="bi bi-star"></i>はフル、それ以外は不明)</th>
                     <th scope="col">アーティスト</th>
                 </tr>
             </thead>
