--- a/src/index.html
+++ b/src/index.html
@@ -42,24 +42,29 @@
             <input id="search-query" class="form-control" placeholder="キーワードであいまい絞り込み">
         </div>
         <div>
-            <div >検索オプション</div>
+            <div>検索オプション</div>
             <input id="favorite-only" class="form-check-input" value="" type="checkbox">
             <label for="favorite-only"><i class="bi bi-heart-fill"></i>のみ</label>
             <input id="full-only" class="form-check-input" value="" type="checkbox">
             <label for="full-only">フルのみ</label>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="video-id-specify-label">video ID指定</span>
+                <input id="video-id-specify" type="text" class="form-control" aria-describedby="video-id-specify-label"
+                    placeholder="video ID">
+            </div>
         </div>
     </div>
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th scope="col">お気に入り</th>
-                    <th scope="col">曲 (<i class="bi bi-star"></i>はフル、それ以外は不明)</th>
-                    <th scope="col">アーティスト</th>
-                </tr>
-            </thead>
-            <tbody id="songs-list"></tbody>
-        </table>
-        </div>
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th scope="col">お気に入り</th>
+                <th scope="col">曲 (<i class="bi bi-star"></i>はフル、それ以外は不明)</th>
+                <th scope="col">アーティスト</th>
+            </tr>
+        </thead>
+        <tbody id="songs-list"></tbody>
+    </table>
+    </div>
 </body>
 
 </html>
