add description meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <base href=".">
     <title>羽村きみか うたさーち</title>
+    <meta name="description" content="Melpoプロダクション所属VTuber 羽村きみか の弾き語り曲を検索できるファンによる非公式のページです">
 </head>
 
 <body>
